--- a/ui/src/main/res/layout/dialog_carbs.xml
+++ b/ui/src/main/res/layout/dialog_carbs.xml
@@ -46,6 +46,7 @@
             android:padding="5dp" />
 
         <LinearLayout
+            android:layout_marginStart="87dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -79,6 +80,10 @@
             android:paddingEnd="5dp">
 
             <TableRow
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="13dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical">
@@ -137,6 +142,10 @@
             </TableRow>
 
             <TableRow
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="13dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical">
@@ -173,6 +182,10 @@
             </TableRow>
 
             <TableRow
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="13dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical">
@@ -210,6 +223,8 @@
         </TableLayout>
 
         <LinearLayout
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
@@ -222,7 +237,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="+5"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/colorPrimary"/>
 
             <com.google.android.material.button.MaterialButton
                 style="@style/GrayButton"
@@ -231,7 +248,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="+10"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/colorPrimary"/>
 
             <com.google.android.material.button.MaterialButton
                 style="@style/GrayButton"
@@ -240,7 +259,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="+20"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/colorPrimary"/>
 
         </LinearLayout>
 
