--- a/plugins/main/src/main/res/layout/overview_buttons_layout.xml
+++ b/plugins/main/src/main/res/layout/overview_buttons_layout.xml
@@ -28,6 +28,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:scaleX="0.9"
+        android:scaleY="0.9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -39,100 +41,127 @@
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/icon_insulin_carbs"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@string/overview_treatment_label"
+            android:text="@string/overview_insulin_label"
             android:textColor="?attr/icTreatmentColor"
             android:visibility="gone"
-            app:iconPadding="-4dp" />
+            app:iconPadding="-4dp"
+            app:cornerRadius="8dp"
+            app:strokeColor="@color/colorPrimary"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"/>
 
         <app.aaps.core.ui.elements.SingleClickButton
             android:id="@+id/insulin_button"
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
-            android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
+            android:layout_height="60dp"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_bolus"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@string/overview_insulin_label"
+            android:text=" "
             android:textColor="?attr/icBolusColor"
-            app:iconPadding="-4dp" />
+            app:cornerRadius="8dp"
+            app:iconPadding="-4dp"
+            app:strokeColor="@color/colorPrimary"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"/>
 
         <app.aaps.core.ui.elements.SingleClickButton
             android:id="@+id/carbs_button"
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_cp_bolus_carbs"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@string/carbs"
+            android:text=" "
             android:textColor="?attr/icBolusCarbsColor"
-            app:iconPadding="-4dp" />
+            app:iconPadding="-4dp"
+            app:cornerRadius="8dp"
+            app:strokeColor="@color/colorPrimary"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"/>
 
         <app.aaps.core.ui.elements.SingleClickButton
             android:id="@+id/wizard_button"
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_calculator"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@string/calculator_label"
+            android:text=" "
             android:textColor="?attr/icCalculatorColor"
-            app:iconPadding="-4dp" />
+            app:iconPadding="-4dp"
+            app:cornerRadius="8dp"
+            app:strokeColor="@color/colorPrimary"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"/>
 
         <app.aaps.core.ui.elements.SingleClickButton
             android:id="@+id/calibration_button"
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_calibration"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@string/calibration"
+            android:text=" "
             android:textColor="?attr/icCalibrationColor"
             android:visibility="gone"
-            app:iconPadding="-4dp" />
+            app:iconPadding="-4dp"
+            app:cornerRadius="8dp"
+            app:strokeColor="@color/colorPrimary"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"/>
 
         <app.aaps.core.ui.elements.SingleClickButton
             android:id="@+id/cgm_button"
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_xdrip"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@string/overview_cgm"
+            android:text=" "
             android:textColor="?attr/icCalibrationColor"
             android:visibility="gone"
-            app:iconPadding="-4dp" />
+            app:iconPadding="-4dp"
+            app:cornerRadius="8dp"
+            app:strokeColor="@color/colorPrimary"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"/>
 
         <app.aaps.core.ui.elements.SingleClickButton
             android:id="@+id/quick_wizard_button"
             style="@style/ButtonSmallFontStyle"
             android:layout_width="0px"
             android:layout_height="fill_parent"
-            android:layout_marginEnd="-2dp"
             android:layout_weight="0.5"
             android:drawableTop="@drawable/ic_quick_wizard"
             android:hint="@string/quickwizard"
-            android:text="@string/quickwizard"
+            android:text=" "
             android:textColor="?attr/icQuickWizardColor"
-            app:iconPadding="-4dp" />
+            app:iconPadding="-4dp"
+            app:cornerRadius="8dp"
+            app:strokeColor="@color/colorPrimary"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="10dp"/>
 
     </LinearLayout>
 
