--- a/ui/src/main/res/layout/activity_survey.xml
+++ b/ui/src/main/res/layout/activity_survey.xml
@@ -158,15 +158,24 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <Button
+            android:background="@drawable/ui_button_states"
             android:id="@+id/submit"
-            android:layout_width="match_parent"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="@string/submit" />
+            android:layout_marginStart="117dp"
+            android:layout_marginEnd="117dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/submit"/>
 
         <Button
+            android:background="@drawable/ui_button_states"
             android:id="@+id/profile"
-            android:layout_width="match_parent"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="117dp"
+            android:layout_marginEnd="117dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/profile" />
 
         <TextView
