--- a/ui/src/main/res/layout/dialog_calibration.xml
+++ b/ui/src/main/res/layout/dialog_calibration.xml
@@ -51,7 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="10dp">
+            android:paddingTop="10dp"
+            android:layout_marginStart="35dp">
 
             <TextView
                 android:id="@+id/bg_label"
