--- a/ui/src/main/res/layout/dialog_wizard.xml
+++ b/ui/src/main/res/layout/dialog_wizard.xml
@@ -85,8 +85,8 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="42dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="42dp"
             android:paddingStart="0dp"
             android:paddingEnd="5dp">
 
