--- a/ui/src/main/res/layout/dialog_temptarget.xml
+++ b/ui/src/main/res/layout/dialog_temptarget.xml
@@ -46,6 +46,9 @@
             android:padding="5dp" />
 
         <LinearLayout
+            android:layout_marginStart="45dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="7dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -83,6 +86,9 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginStart="45dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="7dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -126,6 +132,8 @@
             android:hint="@string/reason">
 
             <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:layout_marginStart="45dp"
+                android:layout_marginEnd="45dp"
                 android:id="@+id/reasonList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -139,11 +147,14 @@
             android:orientation="horizontal">
 
             <app.aaps.core.ui.elements.SingleClickButton
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="3dp"
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/colorPrimary"
                 android:id="@+id/target_cancel"
                 style="@style/ButtonSmallFontStyle"
                 android:layout_width="0px"
                 android:layout_height="fill_parent"
-                android:layout_marginEnd="-2dp"
                 android:layout_weight="0.5"
                 android:drawableTop="@drawable/ic_target_cancel"
                 android:paddingStart="5dp"
@@ -152,11 +163,12 @@
                 android:textColor="?attr/tempTargetConfirmation" />
 
             <app.aaps.core.ui.elements.SingleClickButton
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/colorPrimary"
                 android:id="@+id/eating_soon"
                 style="@style/ButtonSmallFontStyle"
                 android:layout_width="0px"
                 android:layout_height="fill_parent"
-                android:layout_marginEnd="-2dp"
                 android:layout_weight="0.5"
                 android:drawableTop="@drawable/ic_target_eatingsoon"
                 android:paddingStart="5dp"
@@ -165,11 +177,14 @@
                 android:textColor="?attr/carbsColor" />
 
             <app.aaps.core.ui.elements.SingleClickButton
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="3dp"
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/colorPrimary"
                 android:id="@+id/activity"
                 style="@style/ButtonSmallFontStyle"
                 android:layout_width="0px"
                 android:layout_height="fill_parent"
-                android:layout_marginEnd="-2dp"
                 android:layout_weight="0.5"
                 android:drawableTop="@drawable/ic_target_activity"
                 android:paddingStart="5dp"
@@ -178,6 +193,8 @@
                 android:textColor="?attr/exerciseColor" />
 
             <app.aaps.core.ui.elements.SingleClickButton
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/colorPrimary"
                 android:id="@+id/hypo"
                 style="@style/ButtonSmallFontStyle"
                 android:layout_width="0px"
