--- a/ui/src/main/res/layout/dialog_carbs.xml
+++ b/ui/src/main/res/layout/dialog_carbs.xml
@@ -46,7 +46,7 @@
             android:padding="5dp" />
 
         <LinearLayout
-            android:layout_marginStart="87dp"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
