--- a/ui/src/main/res/layout/dialog_fill.xml
+++ b/ui/src/main/res/layout/dialog_fill.xml
@@ -46,6 +46,7 @@
             android:padding="5dp" />
 
         <LinearLayout
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
