--- a/ui/src/main/res/layout/dialog_insulin.xml
+++ b/ui/src/main/res/layout/dialog_insulin.xml
@@ -48,7 +48,7 @@
             android:padding="5dp" />
 
         <LinearLayout
-            android:layout_marginStart="75dp"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
