--- a/ui/src/main/res/layout/activity_tdd_stats.xml
+++ b/ui/src/main/res/layout/activity_tdd_stats.xml
@@ -174,8 +174,7 @@
             style="@style/GrayButton"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_marginStart="125dp"
-            android:layout_marginEnd="125dp"
+            android:layout_gravity="center"
             android:paddingStart="3dp"
             android:paddingEnd="8dp"
             android:paddingTop="8dp"
